# withings-sync

./: .VERSION  .drone.yml  .env.example  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README  README.md  app.py  fit.py  garmin.py  measurements.py  pyproject.toml  requirements.txt  sessioncache.py  setup.py  sync.py  test.fit  test.py  trainerroad.py  withings.py  withings2.py
.github/workflows/: build-publish.yml  docker-image.yml  release-to-pypi.yml
Docker/: Dockerfile  build.sh
config/: withings_app.json
contrib/: do_release.sh  k8s-bootstrap.yaml  k8s-deploy.yaml  k8s-deployment.yaml  k8s-job.yaml  k8s-pvc.yaml  withings.html
templates/: index.html
trainerroad/: __init__.py  api.py
webservice/: main.py  site.wsgi
webservice/static/css/: default.css
webservice/static/css/jquery-ui/: jquery-ui-1.8.9.custom.css
webservice/templates/: index.html
withings_sync/: fit.py  garmin.py  sync.py  trainerroad.py  withings2.py
withings_sync/config/: withings_app.json
